--- a/movie.css
+++ b/movie.css
@@ -53,10 +53,15 @@
   
   .wrapper .sidebar ul li{
     padding: 15px;
-    border-bottom: 1px solid #bdb8d7;
+    border-bottom: 1px solid #2b034d;
     border-bottom: 1px solid rgba(0,0,0,0.05);
-    border-top: 1px solid rgba(255,255,255,0.05);
+    border-top: 1px solid rgba(23, 3, 49, 0.664);
   }    
+
+  .wrapper .sidebar ul li .film.item.sold-out {
+    color: #888;
+    text-decoration: line-through;
+  }
   
   .wrapper .sidebar ul li a{
     color: #C44900;
@@ -68,13 +73,28 @@
   }
   
   .wrapper .sidebar ul li:hover{
-    background-color: #594f8d;
+    background-color: #25032e;
   }
       
   .wrapper .sidebar ul li:hover a{
     color: #fff;
   }
+
+  button {
+    background-color: #2c0229;
+    color: #e60505f3;
+    border: none;
+    padding: 6px 10px;
+    border-radius: 4px;
+    cursor: pointer;
+  }
   
+  button:hover {
+    background-color: #C44900;
+    color: #fff;
+  }
+  
+
   .wrapper .main_content{
     width: 100%;
     margin-left: 200px;
