--- a/movie.css
+++ b/movie.css
@@ -80,16 +80,17 @@
     color: #fff;
   }
 
-  button {
+  .wrapper .sidebar ul li button {
     background-color: #2c0229;
     color: #e60505f3;
     border: none;
     padding: 6px 10px;
     border-radius: 4px;
     cursor: pointer;
+    margin: 0 10px 2px 100px;
   }
   
-  button:hover {
+  .wrapper .sidebar ul li button:hover {
     background-color: #C44900;
     color: #fff;
   }
@@ -130,9 +131,8 @@
   .container {
       display: flex;
       flex-wrap: wrap;
-      margin: 20px;
+      margin: 10px;
       gap: 20px;
-      overflow-y: scroll; 
     }
     
     .card {
